added link to source code

--- a/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
+++ b/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
@@ -16,6 +16,9 @@ categories: spring-boot quickstart rest json microservice
 	surprised how easy it is to create standalone packages that are capable
 	of running production grade services.</p>
 
+<p>Source code for this can be found here : 
+<a href="https://github.com/alainpham/rest-service">https://github.com/alainpham/rest-service</a>
+</p>
 <p>These are the steps of this tutorial</p>
 
 <ul>
