--- a/_posts/2016-12-07-scalable-network-active-mq-brokers-handing-massive-connections.html
+++ b/_posts/2016-12-07-scalable-network-active-mq-brokers-handing-massive-connections.html
@@ -2,6 +2,7 @@
 layout: default
 title:  "Scalable Network of Active MQ brokers for handing massive connections"
 date:   2016-12-07 09:00:00 +0200
+comments: true
 categories: messaging integration iot
 ---
 
