--- a/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
+++ b/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
@@ -2,6 +2,7 @@
 layout: default
 title:  "Quickstart Json RESTful microservice with Spring-Boot"
 date:   2017-02-02 09:00:00 +0200
+comments: true
 categories: spring-boot quickstart rest json microservice
 ---
 
