--- a/_pages/projects/microbam.html
+++ b/_pages/projects/microbam.html
@@ -3,6 +3,7 @@ layout: default
 title: MicroBam Project
 permalink: /projects/microbam/
 description: MicroBam is a lightweight and micro-service oriented Business Activity Monitoring solution.
+comments: true
 ---
 <h2>About this Project</h2>
 <p>Work in progress...</p>
