--- a/_pages/projects/ourlegacy.html
+++ b/_pages/projects/ourlegacy.html
@@ -3,6 +3,7 @@ layout: default
 title: OurLegacy Project
 permalink: /projects/ourlegacy/
 description: OurLegacy aims at offering a generic way to parse and process Legacy formats such as Cobol files.
+comments: true
 ---
 <h2>About this Project</h2>
 <p>Work in progress...</p>
