--- a/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
+++ b/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
@@ -7,7 +7,7 @@ categories: spring-boot quickstart rest json microservice
 ---
 
 <p>In this post you will learn how to create a RESTful microservice
-	from scratch using Spring-Boot using Eclipse & Maven.</p>
+	from scratch using Spring-Boot, Eclipse & Maven.</p>
 <!--more-->
 
 <p>Spring boot is one of the very popular frameworks to build
@@ -218,6 +218,7 @@ http://localhost:8080/svc/person/1
 	class="center-block img-responsive"
 	src="/assets/images/{{page.id}}/consume.png" /></a>
 
+<p>The next post will be about how to deploy such microservices packaged in Docker containers on Openshift</p>
 
 <p>Thanks for reading !</p>
 
