--- a/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
+++ b/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
@@ -2,8 +2,10 @@
 layout: default
 title:  "Quickstart Json RESTful microservice with Spring-Boot"
 date:   2017-02-02 09:00:00 +0200
+updated: 2017-02-03 09:00:00 +0200
 comments: true
-categories: spring-boot quickstart rest json microservice
+categories: coding
+tags: spring-boot quickstart rest json microservice cloudnative
 ---
 
 <p>In this post you will learn how to create a RESTful microservice
