--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Alain's Blog
+title: Alain's Tech Blog
+description: Sharing about Application Development, Integration, Cloud, Big Data and Digital Transformation
 comments: true
 ---
 
