--- a/_posts/2016-12-07-scalable-network-active-mq-brokers-handing-massive-connections.html
+++ b/_posts/2016-12-07-scalable-network-active-mq-brokers-handing-massive-connections.html
@@ -2,7 +2,7 @@
 layout: default
 title:  "Scalable Network of Active MQ brokers for handing massive connections"
 date:   2016-12-07 09:00:00 +0200
-updated: 2016-12-07 09:00:00 +0200
+published: 2016-12-07 09:00:00 +0200
 comments: true
 categories: integration
 tags: messaging integration iot
@@ -277,6 +277,4 @@ There are these test cases that you can run with the command
 [ main] TestAMQNetwork INFO amqc02master dispatch 752</pre>
 
 Thanks for reading !
-
-<p>Originally published {{ page.date | date: '%B %d, %Y' }}</p>
 
