--- a/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
+++ b/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
@@ -2,7 +2,7 @@
 layout: default
 title:  "Quickstart Json RESTful microservice with Spring-Boot"
 date:   2017-02-02 09:00:00 +0200
-updated: 2017-02-03 09:00:00 +0200
+published: 2017-02-03 09:00:00 +0200
 comments: true
 categories: coding
 tags: spring-boot quickstart rest json microservice cloudnative
@@ -223,6 +223,4 @@ http://localhost:8080/svc/person/1
 <p>The next post will be about how to deploy such microservices packaged in Docker containers on Openshift</p>
 
 <p>Thanks for reading !</p>
-
-<p>Originally published {{ page.date | date: '%B %d, %Y' }}</p>
 
