layout enhancements and started new article

--- a/_posts/2016-12-07-scalable-network-active-mq-brokers-handing-massive-connections.html
+++ b/_posts/2016-12-07-scalable-network-active-mq-brokers-handing-massive-connections.html
@@ -5,7 +5,8 @@ date:   2016-12-07 09:00:00 +0200
 published: 2016-12-07 09:00:00 +0200
 comments: true
 categories: integration
-tags: messaging integration iot
+tags: [messaging, integration, iot]
+github: "https://github.com/alainpham/amq-broker-network"
 ---
 
 
