--- a/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
+++ b/_posts/2017-02-02-quickstart-rest-microservice-with-spring-boot.html
@@ -4,8 +4,9 @@ title:  "Quickstart Json RESTful microservice with Spring-Boot"
 date:   2017-02-03 09:00:00 +0200
 published: 2017-02-02 09:00:00 +0200
 comments: true
-categories: coding
-tags: spring-boot quickstart rest json microservice cloudnative
+categories: development
+tags: [spring-boot, quickstart, rest, json, microservice, cloudnative, development]
+github: "https://github.com/alainpham/rest-service"
 ---
 
 <p>In this post you will learn how to create a RESTful microservice
