--- a/_posts/2017-02-13-ansible-automation-for-highly-available-jboss-fuse-amq-integration-platform.html
+++ b/_posts/2017-02-13-ansible-automation-for-highly-available-jboss-fuse-amq-integration-platform.html
@@ -202,6 +202,11 @@ Scalable Network of Active MQ brokers for handing massive connections
 </a>
 </p>
 
+<p>
+If you need your integration platform to grow larger and be highly elastic, consider using PaaS solutions such as
+Openshift. I would say that as a general rule of thumb if you exceed 5 machines in your integration cluster,
+it can already be interesting to consider the Openshift iPaaS approach.  
+</p>
 
 
 <h1>
