--- a/_posts/2017-02-14-faster-fuse-integration-service-s2i-openshift-deployments.html
+++ b/_posts/2017-02-14-faster-fuse-integration-service-s2i-openshift-deployments.html
@@ -2,7 +2,7 @@
 layout: default
 title:  "Faster Fuse Integration Service S2I Openshift Deployments"
 date:   2017-02-14 09:00:00 +0200
-published: 2017-02-14 09:00:00 +0200
+published: false
 comments: true
 categories: development
 tags: [jboss-fuse, fis, openshift, automation]
