--- a/_posts/2017-02-16-faster-fuse-integration-service-s2i-openshift-deployments.html
+++ b/_posts/2017-02-16-faster-fuse-integration-service-s2i-openshift-deployments.html
@@ -95,7 +95,7 @@ The Fuse source repo eventually for older versions of Fuse (fuse-source) : https
 </p>
 
 <p>
-That's it, you have successfully setup your local Maven repository that will keep a local copy off all downloaded artifacts.
+That's it, you have successfully setup your local Maven repository that will keep a local copy of all downloaded artifacts.
 </p>
 
 <h2>
