updated post on faster fis deployments

--- a/_posts/2017-02-16-faster-fuse-integration-service-s2i-openshift-deployments.html
+++ b/_posts/2017-02-16-faster-fuse-integration-service-s2i-openshift-deployments.html
@@ -19,6 +19,9 @@ At the time of writing FIS 2.0 is available as tech preview.
 <!--more-->
 
 <p>(update 22/02/2017) February 21, 2017 : FIS 2.0 GA has been released.</p>
+<p>The method shown here doesn't use the MVN_MIRROR_URL parameter which was enabled in FIS 2.0.
+This will work on FIS 2.0 and also FIS 1.0.
+</p>
 
 <h2>Prerequisites</h2>
 <ul>
@@ -437,7 +440,7 @@ sourceStrategy:
 
 <p>This is the final file I have used : </p>
 <pre>
-wget https://raw.githubusercontent.com/alainpham/fis20-simple-svc/master/openshift/solution.yml
+wget https://raw.githubusercontent.com/alainpham/fis20-simple-svc/v1.0/openshift/solution.yml
 </pre>
 
 <p>The working project with all the resources can be found here : </p>
