fixed about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,22 +7,22 @@ permalink: /about/
 
 <p>
 My name Alain Pham.
-I am currently working as a Solution Architect specialized in Application Development. 
+I am currently working as a Solution Architect specialized in Application Development.
 My main task is to deliver complex proof of concepts across EMEA to enable the adoption of open source technologies.
- 
+
 </p>
 <p>
-The purpose of my life? 
-Since a very young age I have always been passionate about ecosystems of technology. So my purpose on earth is 
+The purpose of my life?
+Since a very young age I have always been passionate about ecosystems of technology. So my purpose on earth is
 making it possible to advantage of a wide range of technologies and methods and to solve one complex problem after another.
 </p>
 
 <p>
 You can also follow me on social media:  <br>
 <a href="http://github.com/alainpham">
-			<i class="fa fa-github fa-3x"></i>
-	<a href="http://www.linkedin.com/in/alainpham"> 
-			<i class="fa fa-linkedin-square fa-3x"></i>
-	<a href="https://twitter.com/koint"> 
-			<i class="fa fa-twitter fa-3x"></i>
+			<i class="fa fa-github fa-3x"></i></a>
+	<a href="http://www.linkedin.com/in/alainpham">
+			<i class="fa fa-linkedin-square fa-3x"></i></a>
+	<a href="https://twitter.com/koint">
+			<i class="fa fa-twitter fa-3x"></i></a>
 </p>
