fixed style in faster s2i

--- a/_posts/2017-04-11-openshift-quickstart-in-5-minutes.html
+++ b/_posts/2017-04-11-openshift-quickstart-in-5-minutes.html
@@ -95,7 +95,7 @@ oc cluster up
 
 <a href="/assets/images/{{page.id}}/logged.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/logged.png" /></a>
+	src="/assets/images/{{page.id}}/logged.png" alt="openshift login page"/></a>
 
 <h2>Deploy sample application</h2>
 <p>In a shell log in as admin and add the Java S2I (source to image) image streams to the openshift project.
@@ -129,7 +129,7 @@ oc create https://raw.githubusercontent.com/alainpham/rest-service/master/opensh
 
 <a href="/assets/images/{{page.id}}/addApp.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/addApp.png" /></a>
+	src="/assets/images/{{page.id}}/addApp.png" alt="openshift add application"/></a>
 <p>The template allows you ton change configurations before creating the different objects on the openshift cluster (i.e. BuildConfig, DeploymentConfig, Services, Routes ..)</p>
 <p>
 The source is cloned from the git repository and built using the Source2Image method.
@@ -138,13 +138,13 @@ This could accelerate build time.
 </p>
 <a href="/assets/images/{{page.id}}/fillTemplate.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/fillTemplate.png" /></a>
+	src="/assets/images/{{page.id}}/fillTemplate.png" alt="openshift app template"/></a>
 
 <p>Click on create and wait for the build and deployments to occur.</p>
 
 <a href="/assets/images/{{page.id}}/deployed.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/deployed.png" /></a>
+	src="/assets/images/{{page.id}}/deployed.png" alt="openshift deployed apps"/></a>
 
 
 <p>Test by calling service.</p>
@@ -158,11 +158,11 @@ This could accelerate build time.
 
 <a href="/assets/images/{{page.id}}/podInfo.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/podInfo.png" /></a>
+	src="/assets/images/{{page.id}}/podInfo.png" alt="openshift pod information"/></a>
 
 	<a href="/assets/images/{{page.id}}/javaconsole.png"> <img
 		class="center-block img-responsive"
-		src="/assets/images/{{page.id}}/javaconsole.png" /></a>
+		src="/assets/images/{{page.id}}/javaconsole.png" alt="java console"/></a>
 
 <p>Thanks for reading</p>
 
