--- a/_posts/2017-04-07-fuse-data-grid-integration-via-hot-rod-with-persistence-and-indexing-for-advanced-queries.html
+++ b/_posts/2017-04-07-fuse-data-grid-integration-via-hot-rod-with-persistence-and-indexing-for-advanced-queries.html
@@ -22,7 +22,7 @@ Furthermore we will see how to take advantage of Protocol buffers and Lucene to 
 
 <a href="/assets/images/{{page.id}}/diag.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/diag.png" /></a>
+	src="/assets/images/{{page.id}}/diag.png" alt="fuse data grid remote server architecture"/></a>
 
 <p>In summary the steps in this tutorial are the following :</p>
 
@@ -101,12 +101,12 @@ Create a Fuse project
 <p>
 <a href="/assets/images/{{page.id}}/selectversion.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/selectversion.png" /></a>
+	src="/assets/images/{{page.id}}/selectversion.png" alt="select version when creatting Fuse project"/></a>
 </p>
 <p>
 <a href="/assets/images/{{page.id}}/selectemptyandspring.png"> <img
 		class="center-block img-responsive"
-		src="/assets/images/{{page.id}}/selectemptyandspring.png" /></a>
+		src="/assets/images/{{page.id}}/selectemptyandspring.png" alt="select emptu spring when creating Fuse project"/></a>
 </p>
 
 <h2>
@@ -672,7 +672,7 @@ curl -X GET --header 'Accept: application/json' 'http://localhost:7123/query/eve
 
 <a href="/assets/images/{{page.id}}/swagger.png"> <img
 	class="center-block img-responsive"
-	src="/assets/images/{{page.id}}/swagger.png" /></a>
+	src="/assets/images/{{page.id}}/swagger.png" alt="swagger for rest service testing"/></a>
 
 
 <h2>
